--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Test\AppData\Local\Temp\testng-eclipse--1263023651\testng-customsuite.xml</span>
+                    <span>C:\Users\Test\AppData\Local\Temp\testng-eclipse-552492119\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,27 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="automationpractice.CuraHealthWeb.tests.LoginTest" class="method navigator-link" hash-for-method="InvalidUserLogInTest( , ThisIsNotAPassword)">InvalidUserLogInTest( , ThisIsNotAPassword)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="automationpractice.CuraHealthWeb.tests.LoginTest" class="method navigator-link" hash-for-method="InvalidUserLogInTest(John Doe, ThisIsWrongPassword)">InvalidUserLogInTest(John Doe, ThisIsWrongPassword)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="automationpractice.CuraHealthWeb.tests.LoginTest" class="method navigator-link" hash-for-method="InvalidUserLogInTest(John Doe,  )">InvalidUserLogInTest(John Doe,  )</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="automationpractice.CuraHealthWeb.tests.LoginTest" class="method navigator-link" hash-for-method="InvalidUserLogInTest(Johnny Doe, ThisIsNotAPassword)">InvalidUserLogInTest(Johnny Doe, ThisIsNotAPassword)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="automationpractice.CuraHealthWeb.tests.LoginTest" class="method navigator-link" hash-for-method="ValidUserLogInTest">ValidUserLogInTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="automationpractice.CuraHealthWeb.tests.BookAppointmentTest" class="method navigator-link" hash-for-method="bookAppointmentTest">bookAppointmentTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -141,46 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">automationpractice.CuraHealthWeb.tests.LoginTest</span>
+              <span class="class-name">automationpractice.CuraHealthWeb.tests.BookAppointmentTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="InvalidUserLogInTest( , ThisIsNotAPassword)">
-                  </a> <!-- InvalidUserLogInTest( , ThisIsNotAPassword) -->
-                  <span class="method-name">InvalidUserLogInTest</span>
-                  <span class="parameters">( ,ThisIsNotAPassword)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="InvalidUserLogInTest(John Doe, ThisIsWrongPassword)">
-                  </a> <!-- InvalidUserLogInTest(John Doe, ThisIsWrongPassword) -->
-                  <span class="method-name">InvalidUserLogInTest</span>
-                  <span class="parameters">(John Doe,ThisIsWrongPassword)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="InvalidUserLogInTest(John Doe,  )">
-                  </a> <!-- InvalidUserLogInTest(John Doe,  ) -->
-                  <span class="method-name">InvalidUserLogInTest</span>
-                  <span class="parameters">(John Doe, )</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="InvalidUserLogInTest(Johnny Doe, ThisIsNotAPassword)">
-                  </a> <!-- InvalidUserLogInTest(Johnny Doe, ThisIsNotAPassword) -->
-                  <span class="method-name">InvalidUserLogInTest</span>
-                  <span class="parameters">(Johnny Doe,ThisIsNotAPassword)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="ValidUserLogInTest">
-                  </a> <!-- ValidUserLogInTest -->
-                  <span class="method-name">ValidUserLogInTest</span>
+                  <a name="bookAppointmentTest">
+                  </a> <!-- bookAppointmentTest -->
+                  <span class="method-name">bookAppointmentTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -188,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Test\AppData\Local\Temp\testng-eclipse--1263023651\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Test\AppData\Local\Temp\testng-eclipse-552492119\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -197,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;automationpractice.CuraHealthWeb.tests.LoginTest&quot;/&gt;
+      &lt;class name=&quot;automationpractice.CuraHealthWeb.tests.BookAppointmentTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -237,32 +185,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'ValidUserLogInTest')
-data.setCell(0, 2, 'automationpractice.CuraHealthWeb.tests.LoginTest')
-data.setCell(0, 3, 1139);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'InvalidUserLogInTest')
-data.setCell(1, 2, 'automationpractice.CuraHealthWeb.tests.LoginTest')
-data.setCell(1, 3, 783);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'InvalidUserLogInTest')
-data.setCell(2, 2, 'automationpractice.CuraHealthWeb.tests.LoginTest')
-data.setCell(2, 3, 747);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'InvalidUserLogInTest')
-data.setCell(3, 2, 'automationpractice.CuraHealthWeb.tests.LoginTest')
-data.setCell(3, 3, 723);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'InvalidUserLogInTest')
-data.setCell(4, 2, 'automationpractice.CuraHealthWeb.tests.LoginTest')
-data.setCell(4, 3, 707);
+data.setCell(0, 1, 'bookAppointmentTest')
+data.setCell(0, 2, 'automationpractice.CuraHealthWeb.tests.BookAppointmentTest')
+data.setCell(0, 3, 1465);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -288,66 +220,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">automationpractice.CuraHealthWeb.tests.LoginTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">automationpractice.CuraHealthWeb.tests.BookAppointmentTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">launchApplication</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">InvalidUserLogInTest(Johnny Doe, ThisIsNotAPassword)</span>
-                <span class="method-start">4278 ms</span>
+                <span class="method-name">bookAppointmentTest</span>
+                <span class="method-start">4308 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">5063 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">launchApplication</span>
-                <span class="method-start">5213 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">InvalidUserLogInTest(John Doe, ThisIsWrongPassword)</span>
-                <span class="method-start">8990 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">9714 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">launchApplication</span>
-                <span class="method-start">9849 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">InvalidUserLogInTest( , ThisIsNotAPassword)</span>
-                <span class="method-start">13612 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">14320 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">launchApplication</span>
-                <span class="method-start">14459 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">InvalidUserLogInTest(John Doe,  )</span>
-                <span class="method-start">18212 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">18961 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">launchApplication</span>
-                <span class="method-start">19084 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">ValidUserLogInTest</span>
-                <span class="method-start">22775 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">23915 ms</span>
+                <span class="method-start">5775 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
