--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Test\AppData\Local\Temp\testng-eclipse-552492119\testng-customsuite.xml</span>
+                    <span>C:\Users\Test\AppData\Local\Temp\testng-eclipse--1336014173\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="automationpractice.CuraHealthWeb.tests.BookAppointmentTest" class="method navigator-link" hash-for-method="bookAppointmentTest">bookAppointmentTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="automationpractice.CuraHealthWeb.tests.BookAppointmentValidationTest" class="method navigator-link" hash-for-method="verifyAlertOnBookAppointment">verifyAlertOnBookAppointment</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">automationpractice.CuraHealthWeb.tests.BookAppointmentTest</span>
+              <span class="class-name">automationpractice.CuraHealthWeb.tests.BookAppointmentValidationTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="bookAppointmentTest">
-                  </a> <!-- bookAppointmentTest -->
-                  <span class="method-name">bookAppointmentTest</span>
+                  <a name="verifyAlertOnBookAppointment">
+                  </a> <!-- verifyAlertOnBookAppointment -->
+                  <span class="method-name">verifyAlertOnBookAppointment</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Test\AppData\Local\Temp\testng-eclipse-552492119\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Test\AppData\Local\Temp\testng-eclipse--1336014173\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +145,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;automationpractice.CuraHealthWeb.tests.BookAppointmentTest&quot;/&gt;
+      &lt;class name=&quot;automationpractice.CuraHealthWeb.tests.BookAppointmentValidationTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -187,14 +187,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'bookAppointmentTest')
-data.setCell(0, 2, 'automationpractice.CuraHealthWeb.tests.BookAppointmentTest')
-data.setCell(0, 3, 1465);
+data.setCell(0, 1, 'verifyAlertOnBookAppointment')
+data.setCell(0, 2, 'automationpractice.CuraHealthWeb.tests.BookAppointmentValidationTest')
+data.setCell(0, 3, 933);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 933 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -220,18 +220,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">automationpractice.CuraHealthWeb.tests.BookAppointmentTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">automationpractice.CuraHealthWeb.tests.BookAppointmentValidationTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">launchApplication</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">bookAppointmentTest</span>
-                <span class="method-start">4308 ms</span>
+                <span class="method-name">verifyAlertOnBookAppointment</span>
+                <span class="method-start">2370 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">5775 ms</span>
+                <span class="method-start">3305 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
